--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <header>
         <h1>Cat Cube Museum</h1>
         <div class="metabar">
-            <a href="https://discord.gg/9bhpkvzn8z" class="button col1">MWD discord</a>
             <a href="https://twitter.com/bulbousbumble" class="button col2">Bulbousbumble</a>
             <a href="https://www.youtube.com/@rectdud155" class="button col3">Lavacrusader</a>
-            <a href="/images.html" class="button col4">Still Images</a>
+            <a href="images.html" class="button col4">Still Images</a>
         </div>
     </header>
     
